--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Identificador de Ecuaciones Químicas</title>
+    <title>Balance de ecuación química</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Identificador de Ecuaciones Químicas</h1>
+        <h1>Balance de ecuación química</h1>
         <form id="equationForm">
             <label for="equation">Ingrese la ecuación química:</label>
             <input type="text" id="equation" required>
-            <button type="submit">Identificar</button>
+            <button type="submit">Balancear</button>
         </form>
         <div id="result">
-            <h2>Resultado</h2>
+            <h2>Primer paso: Identificamos los compuestos</h2>
             <p><strong>Reactivos:</strong> <span id="reactants"></span></p>
             <p><strong>Productos:</strong> <span id="products"></span></p>
         </div>
