--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
         </form>
         <div id="result">
             <h2>Primer paso: Identificamos los compuestos</h2>
-            <p><strong>Reactivos:</strong> <span id="reactants"></span></p>
-            <p><strong>Productos:</strong> <span id="products"></span></p>
+            <p>A cada compuesto le asignaremos una incógnita</p>
+            <div class="columns">
+                <div class="column">
+                    <h3>Reactivos</h3>
+                    <ul id="reactants"></ul>
+                </div>
+                <div class="column">
+                    <h3>Productos</h3>
+                    <ul id="products"></ul>
+                </div>
+            </div>
         </div>
     </div>
     <script src="scripts/identify.js"></script>
