--- a/index.html
+++ b/index.html
@@ -3,32 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Balance de ecuación química</title>
+    <title>Identificador de Ecuaciones Químicas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Balance de ecuación química</h1>
+        <h1>Identificador de Ecuaciones Químicas</h1>
         <form id="equationForm">
             <label for="equation">Ingrese la ecuación química:</label>
             <input type="text" id="equation" required>
-            <button type="submit">Balancear</button>
+            <button type="submit">Identificar</button>
         </form>
         <div id="result">
-            <h2>Primer paso: Identificamos los compuestos</h2>
-            <p>A cada compuesto le asignaremos una incógnita</p>
-            <div class="columns">
-                <div class="column">
-                    <h3>Reactivos</h3>
-                    <ul id="reactants"></ul>
-                </div>
-                <div class="column">
-                    <h3>Productos</h3>
-                    <ul id="products"></ul>
-                </div>
+            <div class="column">
+                <h2>Reactivos</h2>
+                <ul id="reactants"></ul>
+            </div>
+            <div class="column">
+                <h2>Productos</h2>
+                <ul id="products"></ul>
             </div>
         </div>
     </div>
-    <script src="scripts/identify.js"></script>
+    <script src="identify.js"></script>
+    <script src="incognitaEquation.js"></script>
 </body>
 </html>
