--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-    <script src="identify.js"></script>
-    <script src="incognitaEquation.js"></script>
+    <script src="scripts/identify.js"></script>
+    <script src="scripts/incognitaEquation.js"></script>
 </body>
 </html>
