--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Identificador de Ecuaciones Químicas</title>
+    <title>Balance de ecuaciones químicas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Identificador de Ecuaciones Químicas</h1>
+        <h1>Balance de ecuaciones químicas</h1>
         <form id="equationForm">
             <label for="equation">Ingrese la ecuación química:</label>
             <input type="text" id="equation" required>
-            <button type="submit">Identificar</button>
+            <button type="submit">Ajustar</button>
         </form>
-        <div id="result">
+        <div id="identifyCompounds">
+            <label>Identificamos los reactivos y productos, y le asignamos una incognita a cada uno de ellos</label>
             <div class="column">
                 <h2>Reactivos</h2>
                 <ul id="reactants"></ul>
