--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
             <button type="submit">Ajustar</button>
         </form>
         <div id="identifyCompounds">
-            <label>Identificamos los reactivos y productos, y le asignamos una incognita a cada uno de ellos</label>
-            <div class="column">
-                <h2>Reactivos</h2>
-                <ul id="reactants"></ul>
-            </div>
-            <div class="column">
-                <h2>Productos</h2>
-                <ul id="products"></ul>
+            <p>Identificamos los reactivos y productos, y le asignamos una incógnita a cada uno de ellos.</p>
+            <div class="columns">
+                <div class="column">
+                    <h2>Reactivos</h2>
+                    <ul id="reactants"></ul>
+                </div>
+                <div class="column">
+                    <h2>Productos</h2>
+                    <ul id="products"></ul>
+                </div>
             </div>
         </div>
     </div>
