--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </div>
         </div>
     </div>
+    <script src="scripts/formatChemicalFormula.js"></script>
     <script src="scripts/identify.js"></script>
     <script src="scripts/incognitaEquation.js"></script>
 </body>
