--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button type="submit">Ajustar</button>
         </form>
         <div id="identifyCompounds">
-            <p>Identificamos los reactivos y productos, y le asignamos una incógnita a cada uno de ellos.</p>
+            <p>Paso 1: Identificamos los reactivos y productos, y le asignamos una incógnita a cada uno de ellos.</p>
             <div class="columns">
                 <div class="column">
                     <h2>Reactivos</h2>
