--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
                 </div>
             </div>
         </div>
+        <h1>Paso 2:</h1>
+        <div id="equations"></div>
     </div>
     <script src="scripts/formatChemicalFormula.js"></script>
     <script src="scripts/identify.js"></script>
     <script src="scripts/incognitaEquation.js"></script>
+    <script src="scripts/generateEquations.js"></script>
+    <script src="scripts/generateMatrices.js"></script>
 </body>
 </html>
