--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
     <script src="scripts/incognitaEquation.js"></script>
     <script src="scripts/generateEquations.js"></script>
     <script src="scripts/generateMatrices.js"></script>
+    <script src="scripts/DeterGauss.js"></script>
 </body>
 </html>
